correction small bugs linked to previous commit in admin visualization

--- a/src/admin/frontend/bloc/picture_group/styles/style.module.css
+++ b/src/admin/frontend/bloc/picture_group/styles/style.module.css
@@ -140,7 +140,6 @@ button {
   border-radius: 3px;
   border: none;
   transition: all 0.5s;
-  pointer-events: none;
 }
 
 .text_image_group {
