--- a/src/front/page/styles.module.css
+++ b/src/front/page/styles.module.css
@@ -1,5 +1,4 @@
 .carousel {
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
