--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,7 @@ body,
   transition: all 0.5s ease, transition, width;
 }
 h2 {
-  margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 .flex {
   display: flex;
